fixing right sidebar notice container overflow

--- a/assets/_styles/components/notice.scss
+++ b/assets/_styles/components/notice.scss
@@ -53,7 +53,6 @@
   .sidebar--right & {
     margin: 0 0 1em;
     position: relative;
-    float: left;
     left: 0;
     top: 0;
     z-index: 0;
